# gpd_ros

./: CMakeLists.txt  Dockerfile  build_container.sh  init_cfg.sh
cfg/: ros_eigen_params.cfg  ros_eigen_params.cfg.sh  ros_vino_params.cfg  ros_vino_params.cfg.sh
gpd_docker/: CMakeLists.txt  Dockerfile  package.xml  run_container.py  run_container.sh
gpd_docker/launch/: container.launch  container2.launch  grasp_server.launch  grasp_server2.launch
gpd_docker/msg/: Grasps.msg
gpd_docker/src/: grasp_server.py
gpd_docker/srv/: GetGrasps.srv  ReScoreGrasps.srv
gpd_ros/: CMakeLists.txt
gpd_ros/src/gpd_ros/: grasp_detection_node.cpp  grasp_detection_server.cpp
gpd_ros_full/: .gitignore  CMakeLists.txt  package.xml
gpd_ros_full/cfg/: ros_vino_params.cfg.sh
gpd_ros_full/include/gpd_ros/: grasp_detection_server.h  grasp_messages.h
gpd_ros_full/src/gpd_ros/: grasp_detection_server.cpp  grasp_messages.cpp
gpd_ros_full/srv/: score_grasps.srv
launch/: gpd_server.launch  gpd_topic.launch  ur5.launch
src/gpd_ros/: grasp_detection_server.cpp  grasp_plotter.cpp
